# cortex

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml  run.sh
.claude/: settings.json
apps/desktop/: package.json  tsconfig.json
apps/desktop/src/: App.tsx  index.css  main.tsx  themes.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/commands/: mod.rs  storage.rs
apps/desktop/src-tauri/src/crypto/: mod.rs
apps/desktop/src-tauri/src/storage/: local.rs  mod.rs  search.rs  vault.rs
apps/desktop/src/components/: ActivityBar.tsx  EmptyState.tsx  FileTree.tsx  Sidebar.tsx  Skeleton.tsx  TabBar.tsx  VaultSetup.tsx
apps/desktop/src/lib/: autosave.ts  storage.ts
apps/desktop/src/lib/agent/: agent.ts  prompts.ts  providers.ts  types.ts
apps/desktop/src/lib/hooks/: useDocument.ts  useTheme.ts  useVault.ts
apps/desktop/src/pages/: CalendarView.tsx  DocumentBrowser.tsx  DocumentPage.tsx  SearchPage.tsx  SettingsPage.tsx  TodosPage.tsx
apps/desktop/src/stores/: tabs.ts
apps/web/: package.json  vite.config.ts
apps/web/src/: App.tsx
apps/web/src/components/: Sidebar.tsx
apps/web/src/pages/: CalendarView.tsx  DocumentPage.tsx  SettingsPage.tsx  TodosPage.tsx
crates/cortex-core/: Cargo.toml
crates/cortex-core/src/: document.rs  storage.rs
