[package]
name = "cortex-desktop"
version = "0.1.0"
edition = "2021"
description = "Cortex - A second brain application"

[lib]
name = "cortex_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
cortex-core = { path = "../../../crates/cortex-core" }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
base64 = "0.22"
notify = "7"
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
yaml-rust2 = "0.9"
regex = "1"
thiserror = "1"
